// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Object Identifier Bold 1`] = `
<div
  dir="ltr"
>
  <div
    class="fd-object-identifier"
  >
    
    
    <p
      class="fd-object-identifier__title fd-object-identifier__title--bold"
    >
      NoteBook Basic 15
    </p>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Object Identifier Descriptive 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="fd-object-identifier"
  >
    
    
    <p
      class="fd-object-identifier__title"
    >
      NoteBook Basic 15
    </p>
    
    
    <p
      class="fd-object-identifier__text"
    >
      Notebook Basic 15 with 2,80 GHz quad core, 15" LCD, 4 GB DDR3 RAM, 500 GB Hard Disc, Windows 8 Pro
    </p>
    

  </div>
  


  <br />
  


  <div
    class="fd-object-identifier"
  >
    
    
    <p
      class="fd-object-identifier__title fd-object-identifier__title--bold"
    >
      NoteBook Basic 15
    </p>
    
    
    <p
      class="fd-object-identifier__text"
    >
      Notebook Basic 15 with 2,80 GHz quad core, 15" LCD, 4 GB DDR3 RAM, 500 GB Hard Disc, Windows 8 Pro
    </p>
    

  </div>
  


  <br />
  


  <div
    class="fd-object-identifier"
  >
    
    
    <p
      class="fd-object-identifier__title"
    >
      
        
      <a
        class="fd-link fd-object-identifier__link"
        href="#"
      >
        
            NoteBook Basic 15
        
      </a>
      
    
    </p>
    
    
    <p
      class="fd-object-identifier__text"
    >
      Notebook Basic 15 with 2,80 GHz quad core, 15" LCD, 4 GB DDR3 RAM, 500 GB Hard Disc, Windows 8 Pro
    </p>
    

  </div>
  


  <br />
  


  <div
    class="fd-object-identifier"
  >
    
    
    <p
      class="fd-object-identifier__title fd-object-identifier__title--bold"
    >
      
        
      <a
        class="fd-link fd-object-identifier__link"
        href="#"
      >
        
            NoteBook Basic 15
        
      </a>
      
    
    </p>
    
    
    <p
      class="fd-object-identifier__text"
    >
      Notebook Basic 15 with 2,80 GHz quad core, 15" LCD, 4 GB DDR3 RAM, 500 GB Hard Disc, Windows 8 Pro
    </p>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Object Identifier Link 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="fd-object-identifier"
  >
    
    
    <p
      class="fd-object-identifier__title"
    >
      
        
      <a
        class="fd-link fd-object-identifier__link"
        href="#"
      >
        
            NoteBook Basic 15
        
      </a>
      
    
    </p>
    

  </div>
  

  <br />
  

  <div
    class="fd-object-identifier"
  >
    
    
    <p
      class="fd-object-identifier__title fd-object-identifier__title--bold"
    >
      
        
      <a
        class="fd-link fd-object-identifier__link"
        href="#"
      >
        
            NoteBook Basic 15
        
      </a>
      
    
    </p>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Object Identifier Medium Size 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="fd-object-identifier fd-object-identifier--medium"
  >
    
    
    <p
      class="fd-object-identifier__title"
    >
      NoteBook Basic 15
    </p>
    
    
    <p
      class="fd-object-identifier__text"
    >
      Notebook Basic 15 with 2,80 GHz quad core, 15" LCD, 4 GB DDR3 RAM, 500 GB Hard Disc, Windows 8 Pro
    </p>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Object Identifier Title 1`] = `
<div
  dir="ltr"
>
  <div
    class="fd-object-identifier"
  >
    
    
    <p
      class="fd-object-identifier__title"
    >
      NoteBook Basic 15
    </p>
    

  </div>
  

</div>
`;
